# cli

./: .env.example  .gitignore  DEV_README.md  IMAGE_CLASSIFIERS_EXAMPLE.md  LICENSE.txt  Makefile  README.md  api.py  example.modelconfig.toml  fully_release.sh  mymodel.toml  pyproject.toml  release.py  run-debug-and-pipe-to-file.sh  run_system_tests.sh  run_tests.sh  setup.py
.devcontainer/: devcontainer.json
.github/workflows/: run-tests.yml  test.yml
example_configs/: huggingface_config.toml  local_model_config.toml  openai_config.toml
examples/: anthropic-using-preset.toml  cohere-using-azure-ai-studio-preset.toml  custom-dataset.csv  gpt-using-azure-huggingface-deployment.toml  image-model.toml  litellm-using-preset.toml  llama3-on-huggingface.toml  local-model.toml  mistral-large-2407.toml  mistralv02-on-huggingface.toml  openai-using-preset.toml  openai-without-preset-as-example-of-custom-api-support.toml
mindgard/: __main__.py  api_service.py  auth.py  cli.py  config.py  constants.py  dataset_generation.py  exceptions.py  headers.py  main_lib.py  mindgard_api.py  orchestrator.py  preflight.py  responses.py  test.py  test_ui.py  throttle.py  types.py  ui_prefabs.py  utils.py  version.py  wrappers.py
mindgard/external_model_handlers/: image_model.py  llm_model.py
mindgard/recon/: command.py  guardrail.py
mindgard/run_functions/: external_models.py  list_tests.py  sandbox_test.py
mindgard/wrappers/: image.py  llm.py  utils.py
src/mindgard/: __main__.py  api_service.py  attacks.py  auth.py  config.py  constants.py  error.py  exceptions.py  image_model_handler.py  image_wrappers.py  list_tests_command.py  llm_model_handler.py  llm_test_command.py  orchestrator.py  preflight.py  responses.py  run_against_image_model.py  run_command.py  run_llm_local_command.py  run_poll_display.py  run_test_command.py  splash.py  template.py  test_command.py  tests.py  ui_prefabs.py  utils.py  webpubsub.py  wrappers.py
src/mindgard/commands/: list_tests.py  login.py  run_test.py
src/mindgard/run_functions/: external_models.py  image_model_test.py  list_tests.py  llm_model_test.py  sandbox_test.py  utils.py
src/mindgard/submit_functions/: image_model.py  image_model_test.py  list_tests.py  llm_model.py  llm_model_test.py  sandbox_test.py  submit_sandbox_test.py
src/mindgard/wrappers/: image.py  image_label_tensor_config.py  llm.py  utils.py
stubs/auth0/authentication/: token_verifier.pyi
tests/: conftest.py  manual_fake_test.py
tests/mocks/: webpubsub.py
tests/module/: conftest.py  test_api_service.py  test_arg_parsing.py  test_attack_categories.py  test_attacks.py  test_auth.py  test_general.py  test_tests.py  utils.py
tests/refactor/: test_initial.py
tests/system/: conftest.py  test_unauthed.py
tests/tdd/: test_api_service.py  test_orchestrator_polling.py  test_orchestrator_setup.py  test_webpubsub.py
tests/unit/: test_api_service.py  test_arg_parsing.py  test_cli_error_forwarding.py  test_cli_tests.py  test_guardrail_recon_command.py  test_headers.py  test_lib_test.py  test_lib_test_implementation_provider.py  test_lib_test_llm_command.py  test_llm_test_command.py  test_mindgard_api.py  test_orchestrator_polling.py  test_orchestrator_setup.py  test_recon_guardrail.py  test_responses.py  test_run_test_command.py  test_sandbox_test_command.py  test_tensor_align.py  test_test_command.py  test_test_llm_command.py  test_test_ui.py  test_throttle.py  test_webpubsub.py  test_wrappers.py
(+11 files in other folders)
