
[tool.poetry]
name = "mindgard"
version = "0.15.0"
description = "Test your AI model's security without leaving your terminal."
authors = ["Danny Hunt <danny.hunt@mindgard.ai>"]
readme = "README.md"

[tool.poetry.scripts]
mindgard = "mindgard.__main__:main"

[tool.poetry.dependencies]
python = "^3.8"
auth0-python = "^4.7.1"
tabulate = "^0.9.0"


[tool.poetry.group.dev.dependencies]
mypy = "^1.8.0"
twine = "^5.0.0"
wheel = "^0.43.0"
setuptools = "^69.2.0"
types-setuptools = "^69.2.0.20240317"
build = "^1.1.1"
types-requests = "^2.31.0.20240311"
pytest = "^8.1.1"
isort = "^5.13.2"
types-tabulate = "^0.9.0.20240106"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.mypy]
ignore_missing_imports = true
explicit_package_bases = true
strict = true
mypy_path = ["stubs"]

[tool.isort]
known_virtualenvs = ["venv", ".venv", ".test_env", "src/cli/.test_env"]



[tool.autopep8]
max_line_length = 120
ignore = "E501,W6"  # or ["E501", "W6"]
in-place = true
recursive = true
aggressive = 3