
[tool.poetry]
name = "mindgard"
version = "0.78.0"
description = "Test your AI model's security without leaving your terminal."
authors = ["Danny Hunt <danny.hunt@mindgard.ai>"]
readme = "README.md"
homepage = "https://github.com/Mindgard/cli"

[tool.poetry.urls]
Issues = "https://github.com/Mindgard/cli/issues"

[tool.poetry.scripts]
mindgard = "mindgard.cli:main"

[tool.poetry.dependencies]
python = "^3.9"
auth0-python = "^4.7.1"
anthropic = "^0.23.1"
openai = "^1.16.2"
jsonpath-ng = "^1.6.1"
rich = "^13.7.1"
toml = "^0.10.2"
azure-messaging-webpubsubclient = "^1.0.0"
azure-messaging-webpubsubservice = "^1.0.1"
numpy = "^1.26.4"
transformers = "^4.41.1"
jinja2 = "^3.1.4"
tenacity = "^8.4.1"
ratelimit = "^2.2.1"


[tool.poetry.group.dev.dependencies]
mypy = "^1.8.0"
twine = "^5.0.0"
wheel = "^0.43.0"
types-setuptools = "^69.2.0.20240317"
build = "^1.1.1"
types-requests = "^2.31.0.20240311"
pytest = "^8.1.1"
isort = "^5.13.2"
types-tabulate = "^0.9.0.20240106"
requests-mock = "^1.12.1"
pytest-snapshot = "^0.9.0"
autopep8 = "^2.1.0"
types-toml = "^0.10.8.20240310"
setuptools = "^70.0.0"
pytest-watch = "^4.2.0"
pytest-httpx = "^0.33.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.mypy]
ignore_missing_imports = true
explicit_package_bases = true
strict = true
mypy_path = ["stubs"]

[tool.isort]
known_virtualenvs = ["venv", ".venv", ".test_env"]


[tool.autopep8]
max_line_length = 120
ignore = "E501,W6"    # or ["E501", "W6"]
in-place = true
recursive = true
aggressive = 3
